// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme: (entryDocument) should getUrls with custom entryDocument' 1`] = `
Array [
  "modules.md",
  "index.md",
  "modules/breadcrumbs.md",
  "classes/breadcrumbs.breadcrumbs-1.md",
  "classes/breadcrumbs.breadcrumbs-1.md#constructor",
  "classes/breadcrumbs.breadcrumbs-1.md#somemethod",
  "modules/theme.md",
  "modules/theme.md#declarationitema",
  "modules/theme.md#declarationitemb",
  "modules/theme.md#functionitema",
  "modules/theme.md#functionitemb",
  "modules/theme.namespacea.md",
  "classes/theme.namespacea.somenestedclass.md",
  "classes/theme.namespacea.somenestedclass.md#constructor",
  "modules/theme.namespaceb.md",
  "enums/theme.enumitema.md",
  "enums/theme.enumitemb.md",
  "classes/theme.classitema.md",
  "classes/theme.classitema.md#constructor",
  "classes/theme.classitemb.md",
  "classes/theme.classitemb.md#constructor",
  "interfaces/theme.interfaceitema.md",
  "interfaces/theme.interfaceitema.md#prop",
  "interfaces/theme.interfaceitemb.md",
  "interfaces/theme.interfaceitemb.md#prop",
]
`;

exports[`Theme: (filenameSeparator) should getUrls with custom separator' 1`] = `
Array [
  "modules.md",
  "README.md",
  "modules/breadcrumbs.md",
  "classes/breadcrumbs-breadcrumbs-1.md",
  "classes/breadcrumbs-breadcrumbs-1.md#constructor",
  "classes/breadcrumbs-breadcrumbs-1.md#somemethod",
  "modules/theme.md",
  "modules/theme.md#declarationitema",
  "modules/theme.md#declarationitemb",
  "modules/theme.md#functionitema",
  "modules/theme.md#functionitemb",
  "modules/theme-namespacea.md",
  "classes/theme-namespacea-somenestedclass.md",
  "classes/theme-namespacea-somenestedclass.md#constructor",
  "modules/theme-namespaceb.md",
  "enums/theme-enumitema.md",
  "enums/theme-enumitemb.md",
  "classes/theme-classitema.md",
  "classes/theme-classitema.md#constructor",
  "classes/theme-classitemb.md",
  "classes/theme-classitemb.md#constructor",
  "interfaces/theme-interfaceitema.md",
  "interfaces/theme-interfaceitema.md#prop",
  "interfaces/theme-interfaceitemb.md",
  "interfaces/theme-interfaceitemb.md#prop",
]
`;

exports[`Theme: (getUrls) should getUrls with 'allReflectionsHaveOwnDocument' set 1`] = `
Array [
  "modules.md",
  "README.md",
  "modules/breadcrumbs.md",
  "classes/breadcrumbs.breadcrumbs-1.md",
  "classes/breadcrumbs.breadcrumbs-1.md#constructor",
  "classes/breadcrumbs.breadcrumbs-1.md#somemethod",
  "modules/theme.md",
  "modules/theme.namespacea.md",
  "classes/theme.namespacea.somenestedclass.md",
  "classes/theme.namespacea.somenestedclass.md#constructor",
  "modules/theme.namespaceb.md",
  "enums/theme.enumitema.md",
  "enums/theme.enumitemb.md",
  "classes/theme.classitema.md",
  "classes/theme.classitema.md#constructor",
  "classes/theme.classitemb.md",
  "classes/theme.classitemb.md#constructor",
  "interfaces/theme.interfaceitema.md",
  "interfaces/theme.interfaceitema.md#prop",
  "interfaces/theme.interfaceitemb.md",
  "interfaces/theme.interfaceitemb.md#prop",
  "variables/theme.declarationitema.md",
  "variables/theme.declarationitemb.md",
  "functions/theme.functionitema.md",
  "functions/theme.functionitemb.md",
]
`;

exports[`Theme: (getUrls) should getUrls with readme 'none' 1`] = `
Array [
  "README.md",
  "modules/breadcrumbs.md",
  "classes/breadcrumbs.breadcrumbs-1.md",
  "classes/breadcrumbs.breadcrumbs-1.md#constructor",
  "classes/breadcrumbs.breadcrumbs-1.md#somemethod",
  "modules/theme.md",
  "modules/theme.md#declarationitema",
  "modules/theme.md#declarationitemb",
  "modules/theme.md#functionitema",
  "modules/theme.md#functionitemb",
  "modules/theme.namespacea.md",
  "classes/theme.namespacea.somenestedclass.md",
  "classes/theme.namespacea.somenestedclass.md#constructor",
  "modules/theme.namespaceb.md",
  "enums/theme.enumitema.md",
  "enums/theme.enumitemb.md",
  "classes/theme.classitema.md",
  "classes/theme.classitema.md#constructor",
  "classes/theme.classitemb.md",
  "classes/theme.classitemb.md#constructor",
  "interfaces/theme.interfaceitema.md",
  "interfaces/theme.interfaceitema.md#prop",
  "interfaces/theme.interfaceitemb.md",
  "interfaces/theme.interfaceitemb.md#prop",
]
`;

exports[`Theme: (getUrls) should getUrls' 1`] = `
Array [
  "modules.md",
  "README.md",
  "modules/breadcrumbs.md",
  "classes/breadcrumbs.breadcrumbs-1.md",
  "classes/breadcrumbs.breadcrumbs-1.md#constructor",
  "classes/breadcrumbs.breadcrumbs-1.md#somemethod",
  "modules/theme.md",
  "modules/theme.md#declarationitema",
  "modules/theme.md#declarationitemb",
  "modules/theme.md#functionitema",
  "modules/theme.md#functionitemb",
  "modules/theme.namespacea.md",
  "classes/theme.namespacea.somenestedclass.md",
  "classes/theme.namespacea.somenestedclass.md#constructor",
  "modules/theme.namespaceb.md",
  "enums/theme.enumitema.md",
  "enums/theme.enumitemb.md",
  "classes/theme.classitema.md",
  "classes/theme.classitema.md#constructor",
  "classes/theme.classitemb.md",
  "classes/theme.classitemb.md#constructor",
  "interfaces/theme.interfaceitema.md",
  "interfaces/theme.interfaceitema.md#prop",
  "interfaces/theme.interfaceitemb.md",
  "interfaces/theme.interfaceitemb.md#prop",
]
`;

exports[`Theme: (legacy filenames) should getUrls with legacy filenames' 1`] = `
Array [
  "modules.md",
  "README.md",
  "modules/_breadcrumbs_.md",
  "classes/_breadcrumbs_.breadcrumbs-1.md",
  "classes/_breadcrumbs_.breadcrumbs-1.md#constructor",
  "classes/_breadcrumbs_.breadcrumbs-1.md#somemethod",
  "modules/_theme_.md",
  "modules/_theme_.md#declarationitema",
  "modules/_theme_.md#declarationitemb",
  "modules/_theme_.md#functionitema",
  "modules/_theme_.md#functionitemb",
  "modules/_theme_.namespacea.md",
  "classes/_theme_namespacea_.somenestedclass.md",
  "classes/_theme_namespacea_.somenestedclass.md#constructor",
  "modules/_theme_.namespaceb.md",
  "enums/_theme_.enumitema.md",
  "enums/_theme_.enumitemb.md",
  "classes/_theme_.classitema.md",
  "classes/_theme_.classitema.md#constructor",
  "classes/_theme_.classitemb.md",
  "classes/_theme_.classitemb.md#constructor",
  "interfaces/_theme_.interfaceitema.md",
  "interfaces/_theme_.interfaceitema.md#prop",
  "interfaces/_theme_.interfaceitemb.md",
  "interfaces/_theme_.interfaceitemb.md#prop",
]
`;
